# stocklens

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  ORIGIN.md  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py
app/: _data.py  viewer.py
app/pages/: 1_Demand_Classification.py  2_Stock_and_Reorder.py  3_Aging_and_Dead_Stock.py  4_ABC_XYZ_Matrix.py  5_Margin_and_GMROI.py  6_Forecast_and_Reorder_Point.py  7_What_if_Simulator.py  8_Data_Quality.py  9_Methodology.py
config/: rules.toml
data/: aging_cohort.csv  product_status.csv
docs/planning/: BUILD-CONTRACT.md
seed/: generate.py
shims/: __init__.py  data_io.py  report.py
src/stocklens/: __init__.py  aging_alert.py  analytics.py  consolidate.py  demand_classify.py  margin_turnover.py  stock_position.py
src/stocklens/sql/: margin.sql  orders.sql  stocks.sql  turnover.sql
tests/: conftest.py  test_aging.py  test_analytics.py  test_api.py  test_app_smoke.py  test_demand_classify.py  test_outliers.py  test_turnover.py
